# datapilot

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.claude/: package-lock.json
.claude/agents/: infra.md  pm.md  reviewer.md  security.md  tester.md  ux.md
.streamlit/: config.toml
data/demo/: ecommerce_demo.json  game_demo.json
data/mock/: ecommerce.db
datapilot/: __init__.py  config.py  demo.py  pipeline.py  viewer.py
datapilot/agents/: __init__.py  action_recommender.py  bottleneck_detector.py  bundle.py  data_validator.py  hypothesis_generator.py  root_cause_reasoner.py  segmentation_analyzer.py
datapilot/domain/: __init__.py  base.py  ecommerce.py  game.py
datapilot/observability/: __init__.py  metrics.py
datapilot/repository/: __init__.py  bigquery_adapter.py  duckdb_adapter.py  port.py
docs/: mock-data-schema.md  screen-spec.md  wireframe.html
scripts/: dump_demo_fixture.py  measure_analysis.py  seed_mock_data.py  verify_cache.py
tests/: conftest.py
tests/integration/: test_pipeline_ecommerce.py  test_pipeline_metrics.py
tests/unit/: test_agent_bundle.py  test_agent_schemas.py  test_bigquery_adapter.py  test_cache_control_metadata.py  test_data_validator.py  test_domains_config.py  test_duckdb_adapter.py  test_duckdb_adapter_ecommerce.py  test_duckdb_adapter_get_table_row_count.py  test_duckdb_adapter_get_table_rows.py  test_metrics_collector.py  test_pipeline.py  test_repository_factory.py  test_root_cause_3rules.py  test_session_state_reset.py  test_user_template_keywords.py  test_viewer_on_table_change.py  (+1 more)
